--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "faker": "^5.5.3",
     "mongoose": "^6.3.6",
     "nodemon": "^2.0.16",
-    "normalizr": "^3.6.2"
+    "normalizr": "^3.6.2",
+    "socket.io": "^4.5.1"
   }
 }
