--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "express": "^4.18.1",
     "express-session": "^1.17.3",
     "faker": "^5.5.3",
+    "minimist": "^1.2.6",
     "mongoose": "^6.3.6",
-    "nodemon": "^2.0.16",
+    "nodemon": "^1.3.3",
     "normalizr": "^3.6.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
